2014-06-18  Tom Tromey  <tromey@redhat.com>

	* regcache.h (common_get_thread_regcache): Declare.
	* regcache.c (common_get_thread_regcache): New function.
	* common/linux-btrace.h (common_get_thread_regcache): Declare.
	* common/linux-btrace.c (perf_event_read_bts): Use
	common_get_thread_regcache.

2014-06-18  Tom Tromey  <tromey@redhat.com>

	* common/agent.c: Don't include defs.h or server.h.

2014-06-18  Tom Tromey  <tromey@redhat.com>

	* target/symbol.h: New file.
	* target.h: Include target/symbol.h.
	* target.c (target_look_up_symbol): New function.
	* common/agent.c: Include target/symbol.h.
	(agent_look_up_symbols): Use target_look_up_symbol.

2014-06-18  Tom Tromey  <tromey@redhat.com>

	* target/target.h (target_resume, target_wait, target_stop)
	(non_stop): Moved from target.h.
	* target.h (target_resume, target_wait, target_stop, non_stop):
	Move to target/target.h.
	* common/agent.c (agent_run_command): Always use target_resume,
	target_stop, and target_wait.

2014-01-09  Tom Tromey  <tromey@redhat.com>

	* target.h: Include target/target.h.
	(target_read_memory, target_write_memory): Don't declare.
	* target.c (target_read_uint32): New function.
	* common/agent.c: Don't include server.h or defs.h; update
	includes.
	(agent_get_helper_thread_id): Use target_read_uint32.
	(agent_run_command): Always use target_write_memory,
	target_read_memory.
	(agent_capability_check): Use target_read_uint32.
	* target/target.h: New file.

2014-01-09  Tom Tromey  <tromey@redhat.com>

	* btrace.c: Include defs.h.
	* common/btrace-common.h: Don't include server.h or defs.h.

2014-01-09  Tom Tromey  <tromey@redhat.com>

	* common/linux-ptrace.c: Don't include server.h or defs.h; update
	includes.

2014-01-09  Tom Tromey  <tromey@redhat.com>

	* utils.c (debug_vprintf): New function.
	* common/agent.c (debug_agent_print): New function.
	(DEBUG_AGENT): Redefine.
	* common/errors.h (debug_vprintf): Define.

2014-06-18  Tom Tromey  <tromey@redhat.com>
